fix(visualizer): complete refresh button, draggable activity panel, and timeline data fix
- Fix timeline data format mismatch: normalizeEntry() maps server entry fields
  (ts→timestamp, details→args, msg.entry nesting) so timeline renders correctly
- Add null guard in commandToText() to prevent crash on undefined commands
- Add draggable Activity panel: mousedown on header starts drag, switches from
  bottom/right to top/left positioning for free movement
- Add Refresh button with spinning animation in search bar
- Fix refreshProject() to use path-based position matching instead of index-based
  (prevents position scrambling when files are added/removed)
- Rebuild gitChangeSummary and Changes panel after refresh
- Show/hide Changes panel based on whether changes exist after refresh
- Only run layout for genuinely new nodes (no prior position)

--- a/src/visualizer/template.html
+++ b/src/visualizer/template.html
@@ -13,6 +13,12 @@
   <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="var(--text-muted)" stroke-width="2"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.35-4.35"/></svg>
   <input type="text" id="search" placeholder="Search scripts..." />
   <span class="stats" id="stats"></span>
+  <button id="refresh-btn" onclick="refreshProject()" title="Refresh project (re-scan files & git status)">
+    <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+      <path d="M23 4v6h-6M1 20v-6h6"/>
+      <path d="M3.51 9a9 9 0 0114.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0020.49 15"/>
+    </svg>
+  </button>
 </div>
 
 <div id="legend">
