feat(visualizer): Big Typography dark UI with transparent panels and 1.5x size reduction
- Complete UI redesign with editorial Big Typography style
- Fully transparent panel backgrounds (categories, changes, activity)
- Bold display titles (32px) with compact body text (12px)
- Void dark palette: canvas colors, node cards, borders, text
- 1.5x size reduction: panels 220-250px, search 400px, spacing tightened
- NEW badge system for untracked scripts in Changes panel
- Category counts and change stats with compact dot indicators

--- a/src/visualizer/template.html
+++ b/src/visualizer/template.html
@@ -86,6 +86,11 @@
       <span class="changes-label">Untracked</span>
       <span class="changes-count" id="changes-untracked-count">0</span>
     </div>
+    <div class="changes-stat-row" data-type="new" onclick="filterByChangeType('new')">
+      <span class="changes-dot" style="background:#cdd6f4"></span>
+      <span class="changes-label">New</span>
+      <span class="changes-count" id="changes-new-count">0</span>
+    </div>
   </div>
   <div class="changes-total" id="changes-total">0 changed files</div>
 </div>
